@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-02T01:01:49Z",
-  "count" : 4,
+  "timestamp" : "2022-07-15T08:15:46Z",
+  "count" : 2,
   "count_minmax" : [ 1, 4 ],
-  "count_decinc" : [ -0, +4 ],
-  "uniques" : 2,
+  "count_decinc" : [ -2, +4 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
