@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-07-14T16:20:06Z",
+  "timestamp" : "2022-07-15T08:15:46Z",
   "count_outdated" : 390,
   "uniques_outdated" : 212,
-  "count" : 422,
+  "count" : 421,
   "uniques" : 228,
   "clones" : [
     {
       "timestamp": "2022-07-01T00:00:00Z",
-      "count": 4,
+      "count": 2,
       "count_minmax": [ 1, 4 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
@@ -98,6 +98,13 @@
     },
     {
       "timestamp": "2022-07-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
