@@ -1,11 +1,11 @@
 {
-  "count": 32,
-  "uniques": 3,
+  "count": 31,
+  "uniques": 2,
   "clones": [
     {
       "timestamp": "2022-07-01T00:00:00Z",
-      "count": 4,
-      "uniques": 2
+      "count": 2,
+      "uniques": 1
     },
     {
       "timestamp": "2022-07-02T00:00:00Z",
@@ -69,6 +69,11 @@
     },
     {
       "timestamp": "2022-07-14T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-15T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
