@@ -1,3 +1,10 @@
+2022-07-15T08:15:46Z:
+* notice: last 14d: unq all: 2 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 212 390 / 228 422
+* notice: next accum: outdated-unq outdated-all / unq all: 212 390 / 228 421
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-07-01 2022-07-15]
+
 2022-07-14T16:20:06Z:
 * notice: last 14d: unq all: 3 32
 * notice: prev accum: outdated-unq outdated-all / unq all: 211 389 / 227 421
